--- a/messenger/darkmode.css
+++ b/messenger/darkmode.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6
   color: #cecece!important;
 }
 
-._4sp8, ._2n3t, ._1sk6, ._17pz:nth-child(odd), ._17pz:nth-child(even)
+._4sp8, ._2n3t, ._1sk6, ._17pz, ._1t_q
 {
   background-color: #1e1e1e!important;
 }
