Update name color on the right panel

--- a/messenger/darkmode.css
+++ b/messenger/darkmode.css
@@ -567,3 +567,7 @@ div._2poz._ui9 {
 path#Fill-1, path#Fill-2 {
     fill:  #ccc !important;
 }
+
+._3eur._6ybk a {
+    color: #cecece!important;
+}
