Change bottom typing range color

--- a/messenger/darkmode.css
+++ b/messenger/darkmode.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6
   color: #cecece!important;
 }
 
-._4sp8, ._2n3t, ._1sk6, ._17pz, ._1t_q,._5irm._7mkm
+._4sp8, ._2n3t, ._1sk6, ._17pz, ._1t_q
 {
   background-color: #1e1e1e!important;
 }
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6
   color: #cecece!important;
 }
 
-._225b
+._225b, ._5irm._7mkm
 {
   background-color: #2e2e2e!important;
 }
