Workplace new design adapt

--- a/workplace/darkmode.css
+++ b/workplace/darkmode.css
@@ -489,7 +489,11 @@ span.oo9gr5id {
 .nyxn78s7.bpabuz4s.g1w82w5r.h2wm4ntq,
 .n5v69hga,
 .fb_content,
-body {
+body,
+.q6hehfbq,
+._1a9e,
+._6jck,
+ul.uiList._4kg {
 	background-color: #1e1e1e !important;
 }
 
@@ -523,8 +527,4 @@ header {
 ._29nb {
 	min-width: 800px !important;
 	flex: 4 0 846px;
-}
-
-.tv52aht6 {
-	width: 100% !important;
 }
