--- a/googlecalendar/darkmode.css
+++ b/googlecalendar/darkmode.css
@@ -1,12 +1,3 @@
-/* Dark Google Calendar (2019)
-    v2.60.6.8 (2019-01-12)
-    Author: Pawel Cislo (pyxelr) <pyxelr@gmail.com>
-    Repository: https://github.com/pyxelr/Dark_Google_Calendar
-    Userstyle: https://userstyles.org/styles/143026/dark-google-calendar-2019
-    License:    https://creativecommons.org/licenses/by-sa/4.0/
-*/
-
-/* Invert the whole website */
 html {
 -webkit-filter:invert(90%) hue-rotate(180deg)!important;
 filter:invert(90%) hue-rotate(180deg)!important;
@@ -84,7 +75,7 @@ mix-blend-mode:darken;
 
 .g3dbUc.UflSff {
 filter:invert(100%) hue-rotate(180deg) saturate(140%) contrast(105%) opacity(40%)!important;
-color:!important;
+color:#404040!important;
 }
 
 .NlL62b.EfQccc.elYzab-cXXICe-Hjleke.EiZ8Dd.UflSff.jKgTF {
@@ -106,12 +97,16 @@ font-weight:500!important;
 
 .g3dbUc {
 font-weight:900!important;
-color:!important;
+color:#000!important;
+}
+
+.g3dbUc.smECzc {
+color:#666!important;
 }
 
 .FAxxKc {
 font-weight:600!important;
-color:!important;
+color:#000!important;
 }
 
 .rq8Mwb {
@@ -122,7 +117,7 @@ filter:invert(100%)!important;
 color:#c1c1c1!important;
 }
 
-.XHsn7e,.YqtBEc,.xuBVOe,.Mh0NNb,.ck4bY,.asor.asor_i0,.gsoi.gsoi_w,.gsoi.gsoi_c.asor_v,.gsoi.gsoi_9.asor_v,.gsoi.gsoi_7.asor_v,#vqd3vxfo4jpl,#pnsketfj08m,.st-wc,.NlL62b.EfQccc.elYzab-cXXICe-Hjleke.EiZ8Dd,.a63c9c,.Oxm52e,.kImhzd,.hsrazb,.Tnsqdc,.kw5sif,.kXIDId,.sIyjR,.ghXZpb,.whsOnd.zHQkBf {
+.XHsn7e,.YqtBEc,.xuBVOe,.Mh0NNb,.ck4bY,.asor.asor_i0,.gsoi.gsoi_w,.gsoi.gsoi_c.asor_v,.gsoi.gsoi_9.asor_v,.gsoi.gsoi_7.asor_v,#vqd3vxfo4jpl,#pnsketfj08m,.st-wc,.NlL62b.EfQccc.elYzab-cXXICe-Hjleke.EiZ8Dd,.a63c9c.ztKZ3d,.a63c9c,.Oxm52e,.kImhzd,.hsrazb,.Tnsqdc,.kw5sif,.kXIDId,.sIyjR,.ghXZpb,.whsOnd.zHQkBf {
 filter:invert(100%) hue-rotate(180deg) brightness(1.1) saturate(140%) contrast(105%)!important;
 }
 
@@ -134,7 +129,7 @@ font-weight:600!important;
 filter:invert(100%) hue-rotate(180deg) brightness(1.1) contrast(105%)!important;
 }
 
-.Wbs5sd,.rF3YF.wmyjXb,.i5a7ie,.gb_Eb {
+.Wbs5sd,.rF3YF.wmyjXb,.A6wOnd,.VgueE,.Jmftzc.gVNoLb.EiZ8Dd,.Jmftzc.K9QN7e.EiZ8Dd.UflSff,.Jmftzc.K9QN7e.EiZ8Dd,.i5a7ie,.gb_Eb {
 color:#000!important;
 }
 
@@ -152,10 +147,6 @@ color:#fff;
 
 .Jmftzc.gVNoLb.LKeQwe,.Jmftzc.EiZ8Dd {
 color:#000;
-}
-
-.g3dbUc.smECzc,.A6wOnd,.VgueE,.Jmftzc.gVNoLb.EiZ8Dd,.Jmftzc.K9QN7e.EiZ8Dd.UflSff,.Jmftzc.K9QN7e.EiZ8Dd {
-color:!important;
 }
 
 .gb_fa.gb_ng,.gb_Z {
