--- a/workplace/darkmode.css
+++ b/workplace/darkmode.css
@@ -3,7 +3,7 @@ body, .po7knmyp, ._5f0v, ._6q1a ._4sp8, .xdo5vwd7, .nyxn78s7 {
     color: #cecece;
 }
 
-h1, h2, h3, h4, h5, span, .oo9gr5id {
+h1, h2, h3, h4, h5, span, .oo9gr5id, ._364g, ._4p9w ._1ht6 {
     color: #95a5a6;
 }
 
