Fix Whatsapp: updated selector for file attachment name

--- a/whatsapp/darkmode.css
+++ b/whatsapp/darkmode.css
@@ -1041,7 +1041,7 @@ html[dir='LTR'] .landing-header::after {
   border-color: #282d37 !important;
 }
 
-._3Whw5{
+.r9_f4 > .h3p5g > ._3Whw5{
   color: #eee !important;
 }
 
