Fix Facebook Messenger typing indicator

--- a/messenger/darkmode.css
+++ b/messenger/darkmode.css
@@ -947,3 +947,8 @@ body ._8sop:focus {
 body ._3egs {
     background-color: black !important;
 }
+
+/* Typing indicator */
+body ._4gd0 {
+    background-color: black !important;
+}
